--- a/boxers/templates/boxers/index.html
+++ b/boxers/templates/boxers/index.html
@@ -6,7 +6,7 @@
         <tr>
             <th>Last Name</th>
             <th>First Name</th>
-            <th>Nicke Name</th>
+            <th>Nick Name</th>
         </tr>
     </thread>
     <tbody>
@@ -17,6 +17,7 @@
               </td>
             <td>{{boxer.first_name}}</td>
             <td>{{boxer.nick_name}}</td>
+            <td>{{boxer.id}}</td>
         </tr>
         {% endfor %}
     </tbody>
