Edited Boxer Detail page to include BoxerID

--- a/boxers/templates/boxers/detail.html
+++ b/boxers/templates/boxers/detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
   <dl>
+    <dt>Boxer Id</dt>
     <dt>Last Name</dt>
     <dd>{{boxer.last_name}}</dd>
     <dt>First Name</dt>
