--- a/boxers/templates/boxers/index.html
+++ b/boxers/templates/boxers/index.html
@@ -4,6 +4,7 @@
   <table class="table table-bordered table-hover">
     <thread>
         <tr>
+            <th>Boxer Id</th>
             <th>Last Name</th>
             <th>First Name</th>
             <th>Nick Name</th>
@@ -17,7 +18,6 @@
               </td>
             <td>{{boxer.first_name}}</td>
             <td>{{boxer.nick_name}}</td>
-            <td>{{boxer.id}}</td>
         </tr>
         {% endfor %}
     </tbody>
