Added a link to the home page in the Navigation Container

--- a/boxers/templates/boxers/detail.html
+++ b/boxers/templates/boxers/detail.html
@@ -2,6 +2,7 @@
 {% block content %}
   <dl>
     <dt>Boxer Id</dt>
+    <dd>{{boxer.id}}</dd>
     <dt>Last Name</dt>
     <dd>{{boxer.last_name}}</dd>
     <dt>First Name</dt>
