--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
     <!-- As a link -->
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Thomas Boxing Federation</a>
+    <a class="navbar-brand" href='#'>Thomas Boxing Federation</a>
   </div>
-</nav>
+</nav>                    
 
 <!-- As a heading -->
 <nav class="navbar navbar-light bg-light">
