--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <!-- As a link -->
 <nav class="navbar navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href='#'>Thomas Boxing Federation</a>
+    <a class="navbar-brand" href='https://thomasboxingfederationtbf.herokuapp.com/'>Thomas Boxing Federation</a>
   </div>
 </nav>                    
 
