Fixing typo from previous commit

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
  
 {% block content %}
- <a href="https://thomasboxingfederationtbf.herokuapp.com/admingit ">Admin</a>
+ <a href="https://thomasboxingfederationtbf.herokuapp.com/admin">Admin</a>
  <a href="{% url 'boxers:index' %}">Boxers</a>
           <h3 class="page_heading">Thomas Boxing Federation</H3>
             <section>
